--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,6 +1,6 @@
 # Reload configuration
 unbind r
-bind r source-file ~/.tmux.conf
+bind r source-file ~/.config/tmux/tmux.conf \; display-message "tmux config reloaded!"
 
 # Prefix
 set -g prefix C-s
@@ -8,7 +8,6 @@ set -g prefix C-s
 # Mouse and visuals
 set -g mouse on
 set-option -g status-position top
-set -g default-terminal "tmux-256color"
 
 # Smart pane switching with awareness of Vim splits
 bind-key h select-pane -L
@@ -32,31 +31,14 @@ bind-key -n C-t display-popup \
   -h 75% \
   -E "zsh"
 
+set-environment -g TMUX_PLUGIN_MANAGER_PATH '~/.config/tmux/plugins/'
+
 # List of plugins (TPM)
 set -g @plugin 'tmux-plugins/tpm' # Tmux Plugin Manager
-set -g @plugin 'catppuccin/tmux#v2.1.3'
+set -g @plugin 'catppuccin/tmux'
 set -g @plugin 'christoomey/vim-tmux-navigator'
-
-# from omerxx .dotfiles repo
-set -g @catppuccin_window_left_separator ""
-set -g @catppuccin_window_right_separator " "
-set -g @catppuccin_window_middle_separator " █"
-set -g @catppuccin_window_number_position "right"
-set -g @catppuccin_window_default_fill "number"
-set -g @catppuccin_window_default_text "#W"
-set -g @catppuccin_window_current_fill "number"
-set -g @catppuccin_window_current_text "#W#{?window_zoomed_flag,(),}"
-
-set -g @catppuccin_status_modules_right "directory date_time"
-set -g @catppuccin_status_modules_left "session"
-set -g @catppuccin_status_left_separator  " "
-set -g @catppuccin_status_right_separator " "
-set -g @catppuccin_status_right_separator_inverse "no"
-set -g @catppuccin_status_fill "icon"
-set -g @catppuccin_status_connect_separator "no"
-set -g @catppuccin_directory_text "#{b:pane_current_path}"
-
-set -g @catppuccin_date_time_text "%H:%M"
+set -g @plugin 'tmux-plugins/tmux-cpu'
+set -g @plugin 'tmux-plugins/tmux-yank'
 
 # Initialize TPM
-run '~/.tmux/plugins/tpm/tpm'
+run '~/.config/tmux/plugins/tpm/tpm'
