--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -8,6 +8,7 @@ set -g prefix C-s
 # Mouse and visuals
 set -g mouse on
 set-option -g status-position top
+set -g default-terminal "tmux-256color"
 
 # Smart pane switching with awareness of Vim splits
 bind-key h select-pane -L
@@ -35,10 +36,25 @@ set-environment -g TMUX_PLUGIN_MANAGER_PATH '~/.config/tmux/plugins/'
 
 # List of plugins (TPM)
 set -g @plugin 'tmux-plugins/tpm' # Tmux Plugin Manager
-set -g @plugin 'catppuccin/tmux'
+set -g @plugin 'catppuccin/tmux#v2.1.3'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'tmux-plugins/tmux-cpu'
 set -g @plugin 'tmux-plugins/tmux-yank'
+
+# Configure the catppuccin plugin
+set -g @catppuccin_flavor "mocha"
+set -g @catppuccin_window_status_style "rounded"
+
+# Load catppuccin
+run '~/.config/tmux/plugins/tmux/catppuccin.tmux'
+
+# Make the status line pretty and add some modules
+set -g status-right-length 100
+set -g status-left-length 100
+set -g status-left ""
+set -g status-right "#{E:@catppuccin_status_application}"
+set -agF status-right "#{E:@catppuccin_status_cpu}"
+set -ag status-right "#{E:@catppuccin_status_session}"
 
 # Initialize TPM
 run '~/.config/tmux/plugins/tpm/tpm'
