Yabai updates, enabled skhd and tmux updated

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -10,6 +10,13 @@ set -g mouse on
 set-option -g status-position top
 set -g default-terminal "tmux-256color"
 
+set-window-option -g mode-keys vi
+
+bind-key -T copy-mode-vi 'v' send -X begin-selection # start selecting text with "v"
+bind-key -T copy-mode-vi 'y' send -X copy-selection # copy text with "y"
+
+unbind -T copy-mode-vi MouseDragEnd1Pane # don't exit copy mode when dragging with mouse
+
 # Smart pane switching with awareness of Vim splits
 bind-key h select-pane -L
 bind-key j select-pane -D
