--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -1,13 +1,16 @@
 
 macos-titlebar-style = hidden
-font-family = "JetBrainsMono Nerd Font"
+font-family = "MesloLGS Nerd Font Mono"
 # font-style = Regular
-font-size = 15
+font-size = 19
 # font-thicken = true
+theme = "tokyonight"
 
 custom-shader = shaders/cursor_smear_fade.glsl
 custom-shader = shaders/cursor_blaze_no_trail.glsl
 
-keybind = ctrl+d=new_split:right
+#keybind = ctrl+d=new_split:right
 
 unfocused-split-opacity = 0.7
+
+background-opacity = 0.8
