--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -9,6 +9,7 @@ set -g prefix C-s
 set -g mouse on
 set-option -g status-position top
 set -g default-terminal "tmux-256color"
+set -ag terminal-overrides ",xterm-256color:RGB"
 
 set-window-option -g mode-keys vi
 
@@ -43,25 +44,33 @@ set-environment -g TMUX_PLUGIN_MANAGER_PATH '~/.config/tmux/plugins/'
 
 # List of plugins (TPM)
 set -g @plugin 'tmux-plugins/tpm' # Tmux Plugin Manager
-set -g @plugin 'catppuccin/tmux#v2.1.3'
+#set -g @plugin 'catppuccin/tmux#v2.1.3'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'tmux-plugins/tmux-cpu'
 set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'fabioluciano/tmux-tokyo-night'
+
+set -g @resurrect-capture-pane-contents 'on'
+set -g @continuum-restore 'on'
+### Enable transparency
 
 # Configure the catppuccin plugin
-set -g @catppuccin_flavor "mocha"
-set -g @catppuccin_window_status_style "rounded"
+# set -g @catppuccin_flavor "mocha"
+# set -g @catppuccin_window_status_style "rounded"
 
 # Load catppuccin
-run '~/.config/tmux/plugins/tmux/catppuccin.tmux'
+# run '~/.config/tmux/plugins/tmux/catppuccin.tmux'
+
+run '~/.config/tmux/plugins/tmux-tokyo-night/tmux-tokyo-night.tmux'
+
+set -g @theme_transparent_status_bar 'true'
 
 # Make the status line pretty and add some modules
-set -g status-right-length 100
-set -g status-left-length 100
-set -g status-left ""
-set -g status-right "#{E:@catppuccin_status_application}"
-set -agF status-right "#{E:@catppuccin_status_cpu}"
-set -ag status-right "#{E:@catppuccin_status_session}"
+# set -g status-right-length 100
+# set -g status-left-length 100
+# set -g status-right "#{E:@catppuccin_status_application}"
+# set -agF status-right "#{E:@catppuccin_status_cpu}"
+# set -ag status-right "#{E:@catppuccin_status_session}"
 
 # Initialize TPM
 run '~/.config/tmux/plugins/tpm/tpm'
