--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -48,7 +48,8 @@ set -g @plugin 'tmux-plugins/tpm' # Tmux Plugin Manager
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'tmux-plugins/tmux-cpu'
 set -g @plugin 'tmux-plugins/tmux-yank'
-set -g @plugin 'fabioluciano/tmux-tokyo-night'
+set -g @plugin 'egel/tmux-gruvbox'
+set -g @tmux-gruvbox 'dark256'
 
 set -g @resurrect-capture-pane-contents 'on'
 set -g @continuum-restore 'on'
@@ -61,9 +62,7 @@ set -g @continuum-restore 'on'
 # Load catppuccin
 # run '~/.config/tmux/plugins/tmux/catppuccin.tmux'
 
-run '~/.config/tmux/plugins/tmux-tokyo-night/tmux-tokyo-night.tmux'
-
-set -g @theme_transparent_status_bar 'true'
+# set -g @theme_transparent_status_bar 'true'  # gruvbox doesn't support transparency
 
 # Make the status line pretty and add some modules
 # set -g status-right-length 100
