--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -1,4 +1,3 @@
-
 macos-titlebar-style = hidden
 font-family = "MesloLGS Nerd Font Mono"
 # font-style = Regular
@@ -6,13 +5,20 @@ font-size = 19
 # font-thicken = true
 theme = "Gruvbox Dark Hard"
 
-# custom-shader = shaders/cursor_smear_fade.glsl
-# custom-shader = shaders/cursor_blaze_no_trail.glsl
+#custom-shader = shaders/cursor_smear_fade.glsl
+#custom-shader = shaders/cursor_blaze_no_trail.glsl
+custom-shader-animation = true
+custom-shader = shaders/tesla_coil.glsl
+custom-shader = shaders/glow.glsl
 custom-shader = shaders/more-shaders/cursor_warp.glsl
 custom-shader = shaders/more-shaders/ripple_rectangle_cursor.glsl
 
 #keybind = ctrl+d=new_split:right
-
 unfocused-split-opacity = 0.7
 
-background-opacity = 0.8
+background-opacity = 1
+window-decoration = true
+
+mouse-hide-while-typing = true
+
+
