--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -10,8 +10,8 @@ theme = "Gruvbox Dark Hard"
 custom-shader-animation = true
 custom-shader = shaders/tesla_coil.glsl
 custom-shader = shaders/glow.glsl
-custom-shader = shaders/more-shaders/cursor_warp.glsl
-custom-shader = shaders/more-shaders/ripple_rectangle_cursor.glsl
+#custom-shader = shaders/more-shaders/cursor_warp.glsl
+#custom-shader = shaders/more-shaders/ripple_rectangle_cursor.glsl
 
 #keybind = ctrl+d=new_split:right
 unfocused-split-opacity = 0.7
