--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -3,7 +3,7 @@ font-family = "MesloLGS Nerd Font Mono"
 # font-style = Regular
 font-size = 14
 # font-thicken = true
-theme = "Gruvbox Dark Hard"
+theme =  TokyoNight
 
 #custom-shader = shaders/cursor_smear_fade.glsl
 #custom-shader = shaders/cursor_blaze_no_trail.glsl
@@ -16,7 +16,7 @@ custom-shader = shaders/glow.glsl
 #keybind = ctrl+d=new_split:right
 unfocused-split-opacity = 0.7
 
-background-opacity = 1
+background-opacity = 0.85
 window-decoration = true
 
 mouse-hide-while-typing = true
