--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,75 +1,56 @@
-# Reload configuration
-unbind r
-bind r source-file ~/.config/tmux/tmux.conf \; display-message "tmux config reloaded!"
+#set -g default-terminal "tmux-256color"
+set -g default-terminal "xterm-256color"
+#set -ga terminal-overrides ",*256col*:Tc"
+set -ga terminal-overrides ",xterm-256color:Tc"
+# action key
+unbind C-b
+set-option -g prefix C-s
+set-option -g repeat-time 0
+set-option -g focus-events on
 
-# Prefix
-set -g prefix C-s
-
-# Mouse and visuals
-set -g mouse on
-set-option -g status-position top
-set -g default-terminal "tmux-256color"
-set -ag terminal-overrides ",xterm-256color:RGB"
+#### Key bindings
 
 set-window-option -g mode-keys vi
 
-bind-key -T copy-mode-vi 'v' send -X begin-selection # start selecting text with "v"
-bind-key -T copy-mode-vi 'y' send -X copy-selection # copy text with "y"
+#bind t send-key C-t
+# Reload settings
+bind r source-file ~/.config/tmux/tmux.conf \; display "Reloaded!"
+# Open current directory
+bind o run-shell "open '#{pane_current_path}'"
+bind -r e kill-pane -a
 
-unbind -T copy-mode-vi MouseDragEnd1Pane # don't exit copy mode when dragging with mouse
+# Moving window
+bind-key -n C-S-Left swap-window -t -1 \; previous-window
+bind-key -n C-S-Right swap-window -t +1 \; next-window
 
-# Smart pane switching with awareness of Vim splits
-bind-key h select-pane -L
-bind-key j select-pane -D
-bind-key k select-pane -U
-bind-key l select-pane -R
+#### basic settings
+
+set-option -g status-justify "left"
+#set-option utf8-default on
+#set-option -g mouse-select-pane
+set-window-option -g mode-keys vi
+#set-window-option -g utf8 on
+# look'n feel
+set-option -g status-fg cyan
+set-option -g status-bg black
+set -g pane-active-border-style fg=colour166,bg=default
+set -g window-style fg=colour10,bg=default
+set -g window-active-style fg=colour12,bg=default
+set-option -g history-limit 64096
+
+set -sg escape-time 10
 
 
-##### Display Popups #####
+# allow the title bar to adapt to whatever host you connect to
+set -g set-titles on
+set -g set-titles-string "#T"
 
-# Bind C-y to display a popup with lazygit in the current pane's path
-bind-key -n C-y display-popup \
-  -d "#{pane_current_path}" \
-  -w 80% \
-  -h 80% \
-  -E "lazygit"
-# Bind C-x to display a popup with fzf in the current pane's path
-bind-key -n C-t display-popup \
-  -d "#{pane_current_path}" \
-  -w 75% \
-  -h 75% \
-  -E "zsh"
+# import
 
-set-environment -g TMUX_PLUGIN_MANAGER_PATH '~/.config/tmux/plugins/'
+source ~/.config/tmux/theme.conf
+source ~/.config/tmux/statusline.conf
+source ~/.config/tmux/utility.conf
 
-# List of plugins (TPM)
-set -g @plugin 'tmux-plugins/tpm' # Tmux Plugin Manager
-#set -g @plugin 'catppuccin/tmux#v2.1.3'
-set -g @plugin 'christoomey/vim-tmux-navigator'
-set -g @plugin 'tmux-plugins/tmux-cpu'
-set -g @plugin 'tmux-plugins/tmux-yank'
-set -g @plugin 'egel/tmux-gruvbox'
-set -g @tmux-gruvbox 'dark256'
-
-set -g @resurrect-capture-pane-contents 'on'
-set -g @continuum-restore 'on'
-### Enable transparency
-
-# Configure the catppuccin plugin
-# set -g @catppuccin_flavor "mocha"
-# set -g @catppuccin_window_status_style "rounded"
-
-# Load catppuccin
-# run '~/.config/tmux/plugins/tmux/catppuccin.tmux'
-
-# set -g @theme_transparent_status_bar 'true'  # gruvbox doesn't support transparency
-
-# Make the status line pretty and add some modules
-# set -g status-right-length 100
-# set -g status-left-length 100
-# set -g status-right "#{E:@catppuccin_status_application}"
-# set -agF status-right "#{E:@catppuccin_status_cpu}"
-# set -ag status-right "#{E:@catppuccin_status_session}"
-
-# Initialize TPM
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-pain-control'
 run '~/.config/tmux/plugins/tpm/tpm'
