--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -8,11 +8,17 @@ set-option -g prefix C-s
 set-option -g repeat-time 0
 set-option -g focus-events on
 
+# Smart pane switching with awareness of Vim splits
+bind-key h select-pane -L
+bind-key j select-pane -D
+bind-key k select-pane -U
+bind-key l select-pane -R
+
 #### Key bindings
 
 set-window-option -g mode-keys vi
 
-#bind t send-key C-t
+#bind t send-key C-s
 # Reload settings
 bind r source-file ~/.config/tmux/tmux.conf \; display "Reloaded!"
 # Open current directory
@@ -24,11 +30,10 @@ bind-key -n C-S-Left swap-window -t -1 \; previous-window
 bind-key -n C-S-Right swap-window -t +1 \; next-window
 
 #### basic settings
-
+set-option -g status-position bottom
 set-option -g status-justify "left"
 #set-option utf8-default on
 #set-option -g mouse-select-pane
-set-window-option -g mode-keys vi
 #set-window-option -g utf8 on
 # look'n feel
 set-option -g status-fg cyan
@@ -52,5 +57,6 @@ source ~/.config/tmux/statusline.conf
 source ~/.config/tmux/utility.conf
 
 set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'tmux-plugins/tmux-pain-control'
 run '~/.config/tmux/plugins/tpm/tpm'
